--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>ECOMMERCE</title>
   </head>
   <body>
     <header class="header">Olympic</header>
