--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <p>When it comes to staining wood one of the most important steps is letting it rest after applying your wood stain. This works wonders for your project and also lets you enjoy your time outside as well. Most wood stain pros recommend that you should let your stained deck rest 24 to 48 hours while it dries, but different stains call for different measures. Additionally, where you live and the local climate, weather, and humidity can affect this length of time as well.</p>
         <h3>Staining Wood - Step 5: Enjoy Your Deck Responsibly</h3>
         <p>You’re all done! Well, sort of. While you are now free to kick back and enjoy your stained wooden deck you’ve also got to take care of it to make sure it keeps its beautiful appearance – like cleaning it at least once per year. Luckily there are a few products that keep your deck looking great including <strong>the cleaner we referenced above</strong>. Now go, get outside and enjoy that beautifully stained wooden deck that you worked so hard on.</p>
+        <p>Testing change.</p>
     </main>
     <hr />
     <footer>
