--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="assets/css/customize-bootstrap.css">
+<link rel="stylesheet" type="text/css" href="assets/css/ppg-design-system.css">
 <html lang="en">
   <head>
     <title>Product Page</title>
@@ -7,7 +9,7 @@
     <main>
       <img alt="Pro Grade Wall Texture, Orange Peel, Oil Based, 25 oz" 
         style="width: 350px; height: 350px"  
-        src="https://homax90prd.blob.core.windows.net/cmsstorage/homax/files/3d/3d55b7fe-857d-46d7-b590-ac1bf8fc2651.jpg?sv=2015-12-11&sig=eQjg42j42MNpIU9uoHTjp8oToCSc0Ac2iJKfXLGfjO0%3D&spr=https%2Chttp&se=2018-12-03T14%3A49%3A48Z&srt=o&ss=b&sp=r"/>
+        src="https://homax90prd.blob.core.windows.net/cmsstorage/homax/files/e0/e0084d11-d5da-429e-9341-63dfe3bec8a4.jpg?sv=2015-12-11&sig=eQjg42j42MNpIU9uoHTjp8oToCSc0Ac2iJKfXLGfjO0%3D&spr=https%2Chttp&se=2018-12-03T14%3A49%3A48Z&srt=o&ss=b&sp=r"/>
       <h1 class="product-heading">Color Name</h1>
       <h2 class="product-subtitle">Brand, Chemistry, Product Type</h2>
       <p class="hint-text sku-numberBV">PPG Code</p>
