--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       <img alt="Pro Grade Wall Texture, Orange Peel, Oil Based, 25 oz" 
         style="width: 350px; height: 350px"  
         src="https://homax90prd.blob.core.windows.net/cmsstorage/homax/files/e0/e0084d11-d5da-429e-9341-63dfe3bec8a4.jpg?sv=2015-12-11&sig=eQjg42j42MNpIU9uoHTjp8oToCSc0Ac2iJKfXLGfjO0%3D&spr=https%2Chttp&se=2018-12-03T14%3A49%3A48Z&srt=o&ss=b&sp=r"/>
-      <h1 class="product-heading">Color Name</h1>
-      <h2 class="product-subtitle">Brand, Chemistry, Product Type</h2>
+      <h1>PPG Searchable Description</h1>
+      <h2 class="product-heading">Color Name</h1>
+      <h3 class="product-subtitle">Brand, Chemistry, Product Type</h2>
       <p class="hint-text sku-numberBV">PPG Code</p>
       <hr />
       <p>$24 per box 55lbs</p>
